[tool.poetry]
name = "hrl"
version = "0.1.0"
description = ""
authors = ["Global App Testing"]

[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["rllib"], version = "^1.9.0"}
torch = {version = "^1.10.0", optional = true}
gym = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"
wandb = "^0.12.9"

[tool.poetry.extras]
torch = ["torch"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
