[tool.poetry]
name = "hrl"
version = "0.1.0"
description = "A set of interfaces to help designing and developing hierarchical reinforcement learning environments."
authors = ["Global App Testing <developers@globalapptesting.com>"]
repository = "https://github.com/GlobalAppTesting/blog-designing-interface-for-hrl-envs"

[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["rllib"], version = "^1.9.0"}
torch = {version = "^1.10.0", optional = true}
gym = "^0.21.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.930"
flake8 = "^4.0.1"
wandb = "^0.12.9"
isort = "^5.10.1"

[tool.poetry.extras]
torch = ["torch"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
